# predator-analytics

./: .agentignore  .aider.conf.yml  .claw.json  .clineignore  .clinerules  .coverage  .cursor-free-models.json  .cursorrules  .dockerignore  .editorconfig  .env  .env.ai-models  .env.all-api-keys  .env.bak  .env.example  .env.god-mode  .env.nvidia  .env.orchestrator.example  .env.production  .env.server  .env.shadow_template  .env.telegram  .env.telegram.example  .env.telegram_v4.example  .env_remote  .full_auto.md  .gcloudignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pyre_configuration  .ssh.config.optimized  .yamllint.yml  1204  1204.pub  ACTION_CHECKLIST.md  AGENTS.md  AI_MODELS_GUIDE.md  AI_MODELS_SUMMARY.sh  AI_MULTI_AGENT_PLAYBOOK.md  (+455 more)
apps/trinity_bot/: Dockerfile  README.md  pyproject.toml
apps/trinity_bot/bot/: main.py
apps/trinity_bot/core/: cortex.py  tools.py
apps/trinity_bot/utils/: voice.py
libs/predator-common/: pyproject.toml
libs/predator-common/predator_common/: __init__.py  analytics_schemas.py  auth.py  cers_score.py  circuit_breaker.py  content_hash.py  db.py  entity_resolution.py  event_schemas.py  logging.py  models.py  retry.py  security_utils.py  sub_interpreters.py  ueid.py
libs/predator-common/tests/: test_cers_score.py  test_circuit_breaker.py  test_content_hash.py  test_entity_resolution.py  test_event_schemas.py  test_ueid.py
mcp-platform/: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mcp-platform/.github/workflows/: mcp-ci.yml  mcp-deploy.yml
mcp-platform/configs/: backstage.yml  cypress.config.js  grafana.yml  jest.config.js  litmus.yml  loki.yml  mkdocs.yml  nats.yml  neo4j.yml  opa.yml  prometheus.yml  pytest.ini  qdrant.yml  sentry.yml  unleash.yml  vault.yml
mcp-platform/helm/mcp/: Chart.yaml  values.yaml
mcp-platform/k3s-deploy/: cluster.yaml
mcp-platform/mcp/: __init__.py  cli.py  web.py
mcp-platform/mcp/ai_layer/: __init__.py  cli.py  llm_client.py  prompt_templates.py
mcp-platform/mcp/chaos_engineering/: __init__.py  cli.py
mcp-platform/mcp/code_analysis/: __init__.py  ast_parser.py  cli.py  dependency_generator.py  metrics_collector.py
mcp-platform/mcp/event_bus/: __init__.py  bus.py  cli.py
mcp-platform/mcp/feature_flags/: __init__.py  cli.py
mcp-platform/mcp/infrastructure/: __init__.py  argocd_client.py  cli.py  helm_deployer.py  terraform_runner.py
mcp-platform/mcp/memory_layer/: __init__.py  cli.py  memory_manager.py  neo4j_adapter.py  qdrant_adapter.py
mcp-platform/mcp/meta_controller/: __init__.py  bus.py  chaos_runner.py  controller.py  decisions.py  feature_flags_manager.py  github_actions.py  infra_deployer.py  monitor.py  orchestrator.py  reasoning_engine.py  secrets_manager.py  state.py
mcp-platform/mcp/observability/: __init__.py  cli.py  metrics_collector.py
mcp-platform/mcp/registry_docs/: __init__.py  cli.py
mcp-platform/mcp/security/: __init__.py  cli.py  policy_enforcer.py  secrets_manager.py
mcp-platform/mcp/testing/: __init__.py  cli.py
mcp-platform/tests/: test_ai_memory.py  test_api.py  test_code_analysis.py  test_decision_engine.py  test_event_bus.py  test_infrastructure.py  test_observability.py  test_security.py
services/cerebro/: Dockerfile  pyproject.toml
services/cerebro/app/: main.py
services/core-api/: .env.example  .env.remote  Dockerfile  alembic.ini  check_db.py  cloudbuild.yaml  docker-compose.prod.yml  fix_quarantine.py  fix_quarantine.sql  generate_token.py  patch_registry.py  patch_tax.py  pyproject.toml  pytest.ini  remote_upload.py  requirements.txt  run_dossier.py  run_test.py  start_core_api.sh  test_adip.py  test_auth.py  test_compile.py  test_copilot_call.py  test_db.py  test_debtor.py  test_local_ingest.py  test_osint.py  test_pipeline.py  test_prod_pipeline.py  test_token_auth.py  test_upload.py  test_voice.py  verify_deps.py
services/core-api/app/: __init__.py  config.py  config_remote.py  data_lineage.py  database.py  dataset_integrity.py  dependencies.py  graph_validation.py  kafka_dlq.py  main.py  schema_governance.py  test_excel_e2e.py  worker.py
services/core-api/migrations/: env.py
services/core-api/scripts/: download_voice_models.py  setup-production.sh  switch_node.py  test_etl_pipeline.py  test_infrastructure.py  test_qdrant_search.py  test_rag_pipeline.py  test_rag_service.py  test_voice.py
services/core-api/tests/: conftest.py  test_adip_services.py  test_analytics.py  test_autonomous_audit.py  test_cases.py  test_chaos.py  test_companies.py  test_core_circuit_breaker.py  test_db.py  test_declarations.py  test_dossier.py  test_dossier_aggregator.py  test_factory_runtime.py  test_fine_tuning_orchestrator.py  test_graph.py  test_graph_api.py  test_ingestion.py  test_intelligence.py  test_main.py  test_ooda.py  test_osint.py  test_oss_automation_scheduler.py  test_persons.py  test_registries.py  test_risk.py  test_routers_open_data.py  test_sentinel.py  test_smart_data_router.py  test_system.py  test_tenders_analytics.py
services/graph_service/: Dockerfile  pyproject.toml
services/graph_service/app/: config.py  graph_db.py
services/ingestion-worker/: Dockerfile  pyproject.toml  requirements.txt
services/ingestion-worker/app/: config.py  fusion_engine.py  health.py  main.py  minio_client.py  minio_service.py  models.py
services/ingestion-worker/scripts/: mock_customs_producer.py
services/ingestion-worker/tests/: test_automl.py  test_dummy_person_collector.py  test_e2e_pipeline.py  test_file_ingestion.py  test_fusion_engine.py  test_harvester.py  test_harvesters.py  test_open_sanctions_harvester.py  test_ua_registry.py
services/osint-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/osint-service/app/: __init__.py  config.py  main.py
services/rtb-engine/: Dockerfile  engine.py  pyproject.toml
services/rtb-engine/app/: main.py
services/rtb-engine/audit/: artifact.py  store.py
services/rtb-engine/rules/: loader.py  model_rules.yaml
services/synthetic-data-engine/: __init__.py  pyproject.toml  requirements.txt
(+8290 files in other folders)
