[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predator-analytics"
version = "4.1.0"
description = "PREDATOR Analytics — Decision Intelligence Platform для аналізу митних даних, прогнозування ринку та due diligence."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    # Веб-фреймворк
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Валідація
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.2.0",

    # База даних
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Кешування
    "redis[hiredis]>=5.0.4",

    # Черга задач
    "celery[redis]>=5.4.0",

    # Графова БД
    "neo4j>=5.20.0",

    # Пошук
    "opensearch-py>=2.6.0",

    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.3",
    "prophet>=1.1.5",
    "pandas>=2.2.2",
    "numpy>=1.26.4",

    # AI Gateway
    "litellm>=1.40.0",
    "qdrant-client>=1.9.0",

    # Безпека
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",

    # Утиліти
    "structlog>=24.2.0",
    "rich>=13.7.1",
    "tenacity>=8.3.0",

    # Метрики
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "prophet.*",
    "xgboost.*",
    "celery.*",
    "opensearch.*",
    "neo4j.*",
    "qdrant_client.*",
    "litellm.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "node_modules",
    "public_ui",
    "v30_ui",
    "v30_ui_new",
    "legacy",
    "data",
    "scripts",
    "tests/v27_tests",
    "tests/v30_tests",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["E501"] # Line length is handled by formatter
