[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-platform"
version = "0.1.0"
description = "PREDATOR MCP Autonomous AI Platform"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.0",
    "asyncio",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
