[project]
name = "predator-common"
version = "56.5.0"
description = "PREDATOR Analytics — спільні бібліотеки (UEID, Circuit Breaker, Retry, Logging)"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "orjson>=3.9.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["predator_common"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
