[project]
name = "predator-common"
version = "58.2.0"
description = "PREDATOR Analytics — спільні бібліотеки (UEID, Entity Resolution, Event Schemas, Circuit Breaker, Security)"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "orjson>=3.9.0",
    "structlog>=24.1.0",
    "pydantic>=2.6.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "rapidfuzz>=3.5.0",
]
fuzzy = [
    "rapidfuzz>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["predator_common"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
