[tool.poetry]
name = "core-api"
version = "55.1.0"
description = "PREDATOR Analytics v55.1 Core API"
authors = ["PREDATOR Engineering Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
neo4j = "^5.18.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiokafka = "^0.10.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
prometheus-client = "^0.20.0"
psutil = "^5.9.8"
setuptools = "^69.2.0"
# v55.2 нові залежності
alembic = "^1.13.0"
minio = "^7.2.0"
redis = "^5.0.0"
hiredis = "^2.3.0"

# Внутрішня ліба
predator-common = { path = "../../libs/predator-common", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
