[tool.poetry]
name = "predator-graph-service"
version = "55.1.0"
description = "PREDATOR Analytics - Graph Service for neo4j algorithms"
authors = ["PREDATOR Core Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
neo4j = "^5.21.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
setuptools = "^69.2.0"

# Внутрішня бібліотека (common)
predator-common = {path = "../../libs/predator-common", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
