[tool.poetry]
name = "osint-service"
version = "1.0.0"
description = "PREDATOR Analytics OSINT Service — інтеграція з OSINT інструментами"
authors = ["PREDATOR Engineering Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.0"
aiokafka = "^0.10.0"
neo4j = "^5.18.0"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
prometheus-client = "^0.20.0"
python-multipart = "^0.0.9"

# Внутрішня ліба
predator-common = { path = "../../libs/predator-common", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "RUF003"]
