[tool.poetry]
name = "rtb-engine"
version = "55.2.0"
description = "Predator RTB Engine"
authors = ["PREDATOR Engineering Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"
httpx = "^0.27.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
