[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predator-synthetic-data-engine"
version = "1.0.0"
description = "Synthetic Data Engine & AutoTrainer — PREDATOR Analytics v56.5-ELITE"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "sdv>=1.17.0",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "xgboost>=2.0.3",
    "scipy>=1.12.0",
    "faker>=25.2.0",
    "orjson>=3.9.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]
